lock node while gradient is being painted

BUG:248374

svn path=/trunk/koffice/; revision=1176055